--- a/ide.html
+++ b/ide.html
@@ -15,24 +15,24 @@
     <div class="wrap">
         <div class="intro_bg">
             <div class="header">
-                <a href="여행페이지인터파크.html"><img class="logo" src="image/mainlogo.png"></a>
+                <a href="index.html"><img class="logo" src="images/mainlogo.png"></a>
                 <div class="searchArea">
                     <form>
                         <input class="searchbox" type="search" placeholder="도시나 상품을 입력해주세요.">
-                        <img src="image/036search_100009.png">
+                        <img src="images/036search_100009.png">
                     </form>
                 </div>
                 <div class="login">
                     <div class="my">
-                        <img src="image/icons8-%EC%82%AC%EC%9A%A9%EC%9E%90-90.png">
+                        <img src="images/icons8-%EC%82%AC%EC%9A%A9%EC%9E%90-90.png">
                         <p><a href="#">로그인</a></p>
                     </div>
                     <div class="my">
-                        <img src="image/2849808_shop_package_multimedia_icon.png">
+                        <img src="images/2849808_shop_package_multimedia_icon.png">
                         <p><a href="#">예약목록</a></p>
                     </div>
                     <div class="my">
-                        <img src="image/226577_heart_icon.png">
+                        <img src="images/226577_heart_icon.png">
                         <p><a href="#">찜상품</a></p>
                     </div>
                 </div>
@@ -126,18 +126,18 @@
                         <div class="all_reserve">
                             <div class="reserve_air">
                                 <div class="arrive">
-                                    <p><img src="image/icons8-location-150.png">출발지</p>
+                                    <p><img src="images/icons8-location-150.png">출발지</p>
                                 </div>
                                 <div class="arrive2">
-                                    <p><img src="image/icons8-location-150.png">도착지</p>
+                                    <p><img src="images/icons8-location-150.png">도착지</p>
                                 </div>
                             </div>
                             <div class="reserve_air">
                                 <div class="arrive">
-                                    <p><img src="image/icons8-calendar-96.png">출발예정일</p>
+                                    <p><img src="images/icons8-calendar-96.png">출발예정일</p>
                                 </div>
                                 <div class="arrive2">
-                                    <p><img src="image/icons8-사용자-90.png">성인 1명</p>
+                                    <p><img src="images/icons8-사용자-90.png">성인 1명</p>
                                 </div>
                             </div>
                         </div>
@@ -149,22 +149,22 @@
             <h3 class="air_text">지금 HOT! 국내 항공 특가</h3>
             <div class="koreanair">
                 <div class="sebu_air">
-                    <img src="image/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
+                    <img src="images/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
                     <p class="style01">대한항공</p>
                     <p class="air_ment"><a href="#">크리스마스 관광비행<br>12월 25일 출발</a></p><strong>125,400원~</strong>
                 </div>
                 <div class="sebu_air">
-                    <img src="image/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
+                    <img src="images/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
                     <p class="style01">에어서울</p>
                     <p class="air_ment"><a href="#">김포→광주 편도 항공권<br>12월 22일 출발</a></p><strong>125,400원~</strong>
                 </div>
                 <div class="sebu_air">
-                    <img src="image/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
+                    <img src="images/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
                     <p class="style01">대한항공</p>
                     <p class="air_ment"><a href="#">크리스마스 관광비행<br>12월 25일 출발</a></p><strong>125,400원~</strong>
                 </div>
                 <div class="sebu_air">
-                    <img src="image/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
+                    <img src="images/john-mcarthur-BgI_t8knpAg-unsplash.jpg">
                     <p class="style01">대한항공</p>
                     <p class="air_ment"><a href="#">크리스마스 관광비행<br>12월 25일 출발</a></p><strong>125,400원~</strong>
                 </div>
@@ -176,19 +176,19 @@
             </div>
             <div class="md_pick_air">
                 <div class="airimg">
-                    <img src="image/tango-tsuttie-NFOfCT2TB2o-unsplash.jpg">
+                    <img src="images/tango-tsuttie-NFOfCT2TB2o-unsplash.jpg">
                     <div class="shadow_span">
                         <span>대한항공</span>
                         <p>인천↔뉴욕 왕복 항공권</p>
                         <p class="doller">896,000원~</p>
                     </div>
-                    <img src="image/tango-tsuttie-NFOfCT2TB2o-unsplash.jpg">
+                    <img src="images/tango-tsuttie-NFOfCT2TB2o-unsplash.jpg">
                     <div class="shadow_span2">
                         <span>대한항공</span>
                         <p>인천↔뉴욕 왕복 항공권</p>
                         <p class="doller">896,000원~</p>
                     </div>
-                    <img src="image/tango-tsuttie-NFOfCT2TB2o-unsplash.jpg">
+                    <img src="images/tango-tsuttie-NFOfCT2TB2o-unsplash.jpg">
                     <div class="shadow_span3">
                         <span>대한항공</span>
                         <p>인천↔뉴욕 왕복 항공권</p>
@@ -210,25 +210,25 @@
                 </ul>
                 <div class="theme_container2 active">
                     <div id="theme1" class="theme_img on">
-                        <img src="image/chris-karidis-nnzkZNYWHaU-unsplash.jpg">
+                        <img src="images/chris-karidis-nnzkZNYWHaU-unsplash.jpg">
                         <span>파리 7일 투어</span>
                         <p>#에펠탑 #노트르담 대성당</p>
                         <strong>4,629,000원 ~</strong>
                     </div>
                     <div id="theme1" class="theme_img">
-                        <img src="image/vienna-reyes-Zs_o1IjVPt4-unsplash.jpg">
+                        <img src="images/vienna-reyes-Zs_o1IjVPt4-unsplash.jpg">
                         <span>영국 런던 축구 투어</span>
                         <p>#EPL #TOT #STADIUM</p>
                         <strong>4,829,000원 ~</strong>
                     </div>
                     <div id="theme2" class="theme_img">
-                        <img src="image/diogo-fagundes-XvQkiEkLrss-unsplash.jpg">
+                        <img src="images/diogo-fagundes-XvQkiEkLrss-unsplash.jpg">
                         <span>프랑스 르네상스 투어</span>
                         <p>#프랑스 #오르세 미술관</p>
                         <strong>5,629,000원 ~</strong>
                     </div>
                     <div id="theme3" class="theme_img">
-                        <img src="image/jorge-ramirez-ucjWHh2SIF0-unsplash.jpg">
+                        <img src="images/jorge-ramirez-ucjWHh2SIF0-unsplash.jpg">
                         <span>스페인 투어</span>
                         <p>#스페인 #바르셀로나</p>
                         <strong>5,629,000원 ~</strong>
@@ -236,25 +236,25 @@
                 </div>
                 <div class="theme_container2">
                     <div id="theme1" class="theme_img on">
-                        <img src="image/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
+                        <img src="images/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
                         <span>제주도 호캉스</span>
                         <p>#성산 #월정리</p>
                         <strong>4,629,000원 ~</strong>
                     </div>
                     <div id="theme1" class="theme_img">
-                        <img src="image/asia-ga2923ee2f_640%20(1).jpg">
+                        <img src="images/asia-ga2923ee2f_640%20(1).jpg">
                         <span>부산 투어</span>
                         <p>#국제시장 #자갈치시장 #송도</p>
                         <strong>4,829,000원 ~</strong>
                     </div>
                     <div id="theme2" class="theme_img">
-                        <img src="image/diogo-fagundes-XvQkiEkLrss-unsplash.jpg">
+                        <img src="images/diogo-fagundes-XvQkiEkLrss-unsplash.jpg">
                         <span>강원도 투어</span>
                         <p>#프랑스 #오르세 미술관</p>
                         <strong>5,629,000원 ~</strong>
                     </div>
                     <div id="theme3" class="theme_img">
-                        <img src="image/jorge-ramirez-ucjWHh2SIF0-unsplash.jpg">
+                        <img src="images/jorge-ramirez-ucjWHh2SIF0-unsplash.jpg">
                         <span>전라도 맛보기</span>
                         <p>#스페인 #바르셀로나</p>
                         <strong>5,629,000원 ~</strong>
@@ -262,25 +262,25 @@
                 </div>
                 <div class="theme_container2">
                     <div id="theme1" class="theme_img on">
-                        <img src="image/1a38eb34-f82f-4e15-bf94-6ea3fb6dfaa1.jfif">
+                        <img src="images/1a38eb34-f82f-4e15-bf94-6ea3fb6dfaa1.jfif">
                         <span>릴리 비치 투어</span>
                         <p>#스노클링 #리조트</p>
                         <strong>4,629,000원 ~</strong>
                     </div>
                     <div id="theme1" class="theme_img">
-                        <img src="image/architecture-g3aecadb9f_640.jpg">
+                        <img src="images/architecture-g3aecadb9f_640.jpg">
                         <span>다루아톨 투어</span>
                         <p>#Mosque #Transfer #Island</p>
                         <strong>4,829,000원 ~</strong>
                     </div>
                     <div id="theme2" class="theme_img">
-                        <img src="image/john-mcarthur-X_MOr6oa4-k-unsplash.jpg">
+                        <img src="images/john-mcarthur-X_MOr6oa4-k-unsplash.jpg">
                         <span>말레 패키지 여행</span>
                         <p>#프라이데이 #국립 박물관</p>
                         <strong>5,629,000원 ~</strong>
                     </div>
                     <div id="theme3" class="theme_img">
-                        <img src="image/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
+                        <img src="images/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
                         <span>마푸시 투어</span>
                         <p>#Mulee #바나나리프</p>
                         <strong>5,629,000원 ~</strong>
@@ -288,25 +288,25 @@
                 </div>
                 <div class="theme_container2">
                     <div id="theme1" class="theme_img on">
-                        <img src="image/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
+                        <img src="images/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
                         <span>제주도 호캉스</span>
                         <p>#성산 #월정리</p>
                         <strong>4,629,000원 ~</strong>
                     </div>
                     <div id="theme1" class="theme_img">
-                        <img src="image/asia-ga2923ee2f_640%20(1).jpg">
+                        <img src="images/asia-ga2923ee2f_640%20(1).jpg">
                         <span>부산 투어</span>
                         <p>#국제시장 #자갈치시장 #송도</p>
                         <strong>4,829,000원 ~</strong>
                     </div>
                     <div id="theme2" class="theme_img">
-                        <img src="image/diogo-fagundes-XvQkiEkLrss-unsplash.jpg">
+                        <img src="images/diogo-fagundes-XvQkiEkLrss-unsplash.jpg">
                         <span>강원도 투어</span>
                         <p>#프랑스 #오르세 미술관</p>
                         <strong>5,629,000원 ~</strong>
                     </div>
                     <div id="theme3" class="theme_img">
-                        <img src="image/jorge-ramirez-ucjWHh2SIF0-unsplash.jpg">
+                        <img src="images/jorge-ramirez-ucjWHh2SIF0-unsplash.jpg">
                         <span>전라도 맛보기</span>
                         <p>#스페인 #바르셀로나</p>
                         <strong>5,629,000원 ~</strong>
@@ -349,28 +349,28 @@
                 </div>
                 <div class="local">
                     <div class="local_main">
-                        <img src="image/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
                             <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
                         </div> 
                     </div>
                     <div class="local_main">
-                        <img src="image/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
                             <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
                         </div> 
                     </div>
                     <div class="local_main">
-                        <img src="image/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
                             <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
                         </div>  
                     </div>
                     <div class="local_main">
-                        <img src="image/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
                             <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
@@ -388,9 +388,9 @@
                                 href="#">여행자보험</a></span> <span><a href="#">마케팅제휴</a></span> <span><a href="#">공식인증예약센터
                                 검색</a></span>
                         <div class="sns">
-                            <span><a href="#"><img src="image/icons8-facebook-48.png"></a></span> <span><a href="#"><img
-                                        src="image/icons8-instagram-48.png"></a></span> <span><a href="#"><img
-                                        src="image/icons8-twitter-48.png"></a></span>
+                            <span><a href="#"><img src="images/icons8-facebook-48.png"></a></span> <span><a href="#"><img
+                                        src="images/icons8-instagram-48.png"></a></span> <span><a href="#"><img
+                                        src="images/icons8-twitter-48.png"></a></span>
                         </div>
                         <div class="familysite">
                             <select name="sitelist">
@@ -403,7 +403,7 @@
                 </div>
                 <div class="footerdown">
                     <div class="ftlogo">
-                        <img src="image/interfooter2.png">
+                        <img src="images/interfooter2.png">
                     </div>
                     <div class="consumer">
                         <h4>고객센터 운영안내</h4>
