--- a/ide.html
+++ b/ide.html
@@ -356,24 +356,24 @@
                         </div> 
                     </div>
                     <div class="local_main">
-                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/jimmy-conover-4DP4P3v-dGk-unsplash.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
-                            <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
+                            <p>모하비 사막 현지 체험 패키지!</p><strong>1,100,000원</strong>
                         </div> 
                     </div>
                     <div class="local_main">
-                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/Budapest_Hungary_Houses_Rivers_Bridges_Night_525475_1920x960.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
-                            <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
+                            <p>부다페스트 현지 체험 패키지!</p><strong>1,200,000원</strong>
                         </div>  
                     </div>
                     <div class="local_main">
-                        <img src="images/rashid-khreiss-q-jcWD3Jyb8-unsplash.jpg">
+                        <img src="images/mike-petrucci-k9DHPwtRb80-unsplash.jpg">
                         <div class="local_ment">
                             <span>현지이색체험</span>
-                            <p>오스트레일리아 현지 체험 패키지!</p><strong>1,200,000원</strong>
+                            <p>유럽 현지 체험 패키지!</p><strong>1,200,000원</strong>
                         </div> 
                     </div>
                 </div>
